<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carriers"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/std_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#16502F"
            android:padding="10dp"
            android:text="@string/digtal_tech_student"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/std_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff0000"
            android:padding="10dp"
            android:text="@string/new_zealand_certificate_in_digital_media_and_design"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f2f2f2"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/careers"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/std_Comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assistant_and_or_support_roles_in_various_industries_including_advertising_web_design_in_house_design_studio_news_media"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/calendar_today_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_intake_per_year" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/watch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_19_weeks_full_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/money" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_fees_and_free_study_eligibility_visit_manukau_ac_nz" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/std_Image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/manukau_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MIT Otara" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>